# snapbridge

./: Cargo.toml  README.md  install.sh  proxsnap.example.toml  snapbridge.example.toml
.github/workflows/: ci.yml  debian-release.yml
packaging/systemd/: proxsnap-schedule@.service  proxsnap-schedule@.timer  snapbridge-schedule@.service  snapbridge-schedule@.timer
src/: cli.rs  config.rs  display.rs  error.rs  lib.rs  logger.rs  main.rs  models.rs  shell.rs  util.rs
src/clients/: mod.rs
src/clients/ontap/: api.rs  http.rs  mod.rs  reqwest.rs  types.rs
src/clients/proxmox/: api.rs  http.rs  mod.rs  reqwest.rs  types.rs
src/workflows/: mod.rs  scheduler.rs
src/workflows/nas/: discovery.rs  mod.rs  storage.rs  tests.rs  vm.rs
src/workflows/san/: mod.rs  storage.rs  tests.rs
