[package]
name = "proxsnap"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8.23"
urlencoding = "2.1.3"
